--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -146,3 +146,33 @@
     color:#00b4d8;
 }
 
+.skills-subcontainer{
+    display:flex;
+    justify-content:space-around;
+}
+
+.skills-image img{
+    width:500px;
+}
+
+.skill-bars{
+    border:1px solid red;
+    width:600px;
+    display: grid;
+    justify-content:center;
+}
+
+.skill{
+    border:1px solid red;
+    width:500px;
+}
+
+.skill progress{
+    width:500px;
+    height:50px;
+}
+
+.skill-logo{
+    display:flex;
+    justify-content:space-between;
+}
