--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -312,9 +312,9 @@
 
 @media(max-width:900px){
     .background-video{
-        width:900px;
-        height:500px;
-        overflow:hidden;
+        /* width:900px; */
+        /* height:500px; */
+        /* overflow:hidden; */
     }
 
     .home{
@@ -406,6 +406,10 @@
     .navigation-container{
 
     }
+}
+
+@media(max-width:600px){
+
 }
 
 @media(max-width:512px){
