--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -22,7 +22,6 @@
     justify-content:space-between;
     background-color:white;
     border-bottom:1px solid #c4c4c4;
-    width:100%;
 }
 
 .navigation-logo h3{
@@ -51,6 +50,14 @@
     display:none;
 }
 
+
+.nav-menu-mobile{
+    display:none;
+}
+
+.display{
+    display:none;
+}
     /* HOME SECTION */
 
 .background-video{
@@ -58,8 +65,13 @@
     width:100%;
 }
 
+.background-video-mobile{
+    display:none;
+}
+
 .home-container{
-    height:110vh;
+    min-width:100%;
+    width:auto;
 }
 
 .home{
@@ -67,9 +79,9 @@
     top:-400px;
     display:grid;
     align-content:space-around;
-    width:50%;
+    width:100%;
     padding-left:2em;
-    height:55vh;
+    height:50%;
     color:white;
 }
 
@@ -344,13 +356,6 @@
 }
 
 @media(max-width:768px){
-    .navigation-container nav{
-        display:none;
-    }
-
-    .nav-toggle-button{
-        display:block;
-    }
     .about-subcontainer{
         display:grid;
         align-content:center;
@@ -409,6 +414,146 @@
 }
 
 @media(max-width:600px){
+    .nav-menu-desktop{
+        display:none;
+    }
+
+    .nav-toggle-button{
+        display:block;
+    }
+
+    .display{
+        display:block;
+    }
+
+    .nav-menu-mobile{
+        background-color:white;
+    }
+
+    .nav-menu-mobile nav{
+        
+    }
+
+    .nav-menu-mobile nav ul{
+        display:grid;
+        text-align: center;
+    }
+
+    .nav-menu-mobile nav ul li{
+        width:535px;
+        border:1px solid #c4c4c4;
+        list-style:none;
+    }
+
+    .nav-menu-mobile nav ul li a{
+        text-decoration:none;
+        color:#023e8a;
+    }
+
+    .nav-toggle-button button{
+        width:50px;
+        background-color:white;
+        border:1px solid #023e8a;
+        height:50px;
+    }
+
+    .nav-toggle-button button i{
+        width:50px;
+        color:#023e8a;
+    }
+
+    .navigation-position{
+        width:535px;
+    }
+
+    .navigation-container{
+        width:535px;
+    }
+
+    .home-container{
+        width:525px;
+        height:600px;
+    }
+
+
+    .home{
+    }
+
+    .about-container{
+        width:550px;
+    }
+
+    .about-image{
+    }
+
+    .navigation-container{
+    }
+    .background-video{
+        display:none;
+    }
+    .background-video-mobile{
+        display:block;
+        /* width:100%; */
+        height:600px;
+        min-width:100%;
+        width:600px;
+        object-fit:cover;
+        overflow:hidden;
+    }
+
+    .skills-container{
+        width:550px;
+    }
+
+    .skills-image{
+        width:500px;
+    }
+
+    .skills-image img{
+        width:500px;
+    }
+
+    .skill{
+        width:500px;
+    }
+
+    .skill progress{
+        width:300px;
+    }
+
+    .project-container{
+        width:550px;
+    }
+    .projects{
+        grid-template-columns:repeat(1 , 1fr);
+        row-gap:20px;
+    }
+
+    .project-card{
+        max-width:550px;
+        width:100%;
+        height:auto;
+    }
+
+    .project-card img{
+        max-width:550px;
+        width:100%;
+    }
+
+    .project-card p{
+        max-width:550px;
+    }
+
+    .contact-container{
+        width:550px;
+    }
+
+    .footer-container{
+        width:550px;
+    }
+
+    h2{
+    }
 
 }
 
